# laurel

./: .gitignore  Cargo.toml  Containerfile  Dockerfile  INSTALL.md  Makefile  README.md  auto-install.sh  build.rs  json-format.md  performance.md  practical-auditd-problems.md
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: build.yml  check.yml  release.yml  selinux.yml
audit-specs/: README.md
audit-specs/fields/: field-dictionary.csv
audit-specs/messages/: message-dictionary.csv
benches/: Makefile  coalesce_execve.rs  parse.rs
contrib/apparmor/: config
contrib/debug/: README.md  run-debug.sh
contrib/musl-static-build/: rustc-wrapper
contrib/performance-data/: Makefile  performance.gp
contrib/selinux/: .gitignore  Makefile  laurel.fc  laurel.te
doc/: Makefile  laurel-about.7.md  laurel.8.md
etc/apparmor/: laurel
etc/laurel/: config.toml
man/: .gitignore  Makefile  laurel-about.7.md  laurel-audit-rules.7.md  laurel.8.md  laurel2audit.8.md
src/: coalesce.rs  config.rs  const.rs.in  constants.rs  env_matcher.rs  file_handling.rs  hash.rs  json.rs  label_matcher.rs  lib.rs  logger.rs  lumberjack.rs  main.rs  parser.rs  proc.rs  procfs.rs  quote.rs  quoted_string.rs  rotate.rs  sockaddr.h  sockaddr.rs  test.rs  types.rs  userdb.rs
src/procfs/: io.rs  mock.rs
src/tbl/: uringop_table.h
src/tbl/syscall/: aarch64_table.h  arm_table.h  i386_table.h  ppc_table.h  riscv32_table.h  riscv64_table.h  s390_table.h  s390x_table.h  x86_64_table.h
src/testdata/: fork-sleep-exec.txt  line-anom-abend-2.txt  line-anom-abend.txt  line-avc-denied.txt  line-avc-granted.txt  line-broken-avc-info.txt  line-broken-subj1.txt  line-broken-subj2.txt  line-daemon-end.txt  line-eoe.txt  line-execve.txt  line-mac-policy-load.txt  line-netfilter.txt  line-netlabel.txt  line-path-enriched.txt  line-path.txt  line-sockaddr-unix-2.txt  line-sockaddr-unix.txt  line-sockaddr-unknown-1.txt  line-sockaddr-unknown-2.txt  line-sockaddr-unknown-3.txt  line-syscall.txt  line-tty.txt  line-unknown.txt  line-user-acct.txt  line-user-auth-2.txt  line-user-auth.txt  proc-trace-dpkg-l.txt  record-adjntpval.json  record-adjntpval.txt  record-anom-promiscuous.json  record-anom-promiscuous.txt  record-avc-apparmor.json  record-avc-apparmor.txt  record-bind-ipv4-bigendian.json  record-bind-ipv4-bigendian.txt  record-connect.txt  record-execve-long.json  record-execve-long.txt  record-execve.json  (+21 more)
src/testdata/todo/: line-broken-subj1.txt  line-broken-subj2.txt
src/testdata/tree/: 00.txt  01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  README.txt
syscall-tables/: README.md  aarch64_table.h  arm_table.h  i386_table.h  ppc_table.h  riscv32_table.h  s390_table.h  s390x_table.h  x86_64_table.h
