[package]
name = "laurel"
version = "0.5.2-pre1"
authors = ["Hilko Bengen <bengen@hilluzination.de>",
           "Sergej Schmidt <sergej@msgpeek.net>"]
edition = "2021"
rust-version = "1.56"
description = "Transform Linux Audit logs for SIEM usage"
homepage = "https://github.com/threathunters-io/laurel"
repository = "https://github.com/threathunters-io/laurel"
license = "GPL-3.0-or-later"
keywords = ["linux", "audit", "parser", "log", "json"]
categories = ["encoding"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
nom = "7"
lazy_static = "1"
getopts = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
indexmap = "1"
toml = "0.5"
nix = "0.22"
caps = "0.5"
libc = "0.2"
exacl = ">= 0.6"
regex = "1"
tinyvec = { version = "1", features = ["alloc"] }

[build-dependencies]
bindgen = "0.60"

[dev-dependencies]
bencher = "0"
gperftools = "0"

[[bench]]
name = "coalesce_execve"
harness = false

[[bench]]
name = "parse"
harness = false
