[package]
name = "laurel"
version = "0.5.5"
authors = ["Hilko Bengen <bengen@hilluzination.de>",
           "Sergej Schmidt <sergej@msgpeek.net>"]
edition = "2021"
rust-version = "1.56"
description = "Transform Linux Audit logs for SIEM usage"
homepage = "https://github.com/threathunters-io/laurel"
repository = "https://github.com/threathunters-io/laurel"
license = "GPL-3.0-or-later"
keywords = ["linux", "audit", "parser", "log", "json"]
categories = ["encoding"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
nom = "7"
lazy_static = "1"
getopts = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
indexmap = { version = "2", features = ["serde"] }
toml = "0.5"
nix = "0.26"
caps = "0.5"
libc = "0.2"
exacl = ">= 0.6"
regex = "1"
signal-hook = "0.3"
tinyvec = { version = "1", features = ["alloc"] }

log = "0.4"
simple_logger = ">= 1"
syslog = "6"

[build-dependencies]
bindgen = ">= 0.60"

[dev-dependencies]
bencher = "0"
gperftools = "0"

[features]
procfs = []
default = ["procfs"]

[[bench]]
name = "coalesce_execve"
harness = false

[[bench]]
name = "parse"
harness = false
