[package]
name = "laurel"
version = "0.8.0"
authors = ["Hilko Bengen <bengen@hilluzination.de>",
           "Sergej Schmidt <sergej@msgpeek.net>"]
edition = "2021"
rust-version = "1.70"
description = "Transform Linux Audit logs for SIEM usage"
homepage = "https://github.com/threathunters-io/laurel"
repository = "https://github.com/threathunters-io/laurel"
license = "GPL-3.0-or-later"
keywords = ["linux", "audit", "parser", "log", "json"]
categories = ["encoding"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
lazy_static = "1"
getopts = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
indexmap = { version = "2", features = ["serde"] }
toml =  { version = "0.9", default-features = false, features = ["parse", "display", "serde"] }
nix = { version = ">= 0.26", features = ["user", "fs", "time", "process", "signal"]}
libc = "0.2"
exacl = ">= 0.6"
regex = { version = "1", default-features = false, features = [ "std", "perf", "unicode" ] }
signal-hook = "0.3"
tinyvec = { version = "1", features = ["alloc", "serde"] }

log = "0.4"
simple_logger = ">= 1"
syslog = "7"
thiserror = "2"
anyhow = "1"
faster-hex = ">= 0.9"
sha2 = { version = "0.10", default-features = false }
linux-audit-parser = "0.2.6"
serde_with = { version = "3", default-features = false, features = ["macros"] }
serde_bytes = "0.11.15"
ipnetwork = "0.21.1"
aho-corasick = "1.1"
memchr = "2.8.1"
itertools = "0.14.0"
caps = "0.5"
bstr = "1.12.3"

[build-dependencies]
bindgen = ">= 0.60"

[dev-dependencies]
divan = "0.1.13"
gperftools = "0"

[[bench]]
name = "coalesce_execve"
harness = false
